# EDD_project

./: .gitignore  CMakeLists.txt  Ce que j'ai compris des consignes.txt  Makefile  README.md  README.txt  grid.c  grid.h  strategy.c  test_grid.c
doc/: Doxyfile  doxygen_log.txt
doc/html/: 2048__efficient___i_a_8c_source.html  2048__fast___i_a_8c.html  2048__fast___i_a_8c_source.html  2048__ncurses_8c.html  2048__ncurses_8c_source.html  2048__sdl_8c.html  2048__sdl_8c_source.html  2048__sdl___i_a_8c_source.html  affichage_8c.html  affichage_8c_source.html  affichage_8h.html  affichage_8h_source.html  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  grid_8c.html  grid_8c_source.html  grid_8h.html  grid_8h_source.html  index.html  main.html  sdl_8h.html  sdl_8h_source.html  strategy_8h.html  strategy_8h_source.html  strategy__efficient_8c.html  strategy__efficient_8c_source.html  strategy__efficient_8h.html  strategy__efficient_8h_source.html  strategy__fast_8c.html  strategy__fast_8c_source.html  strategy__fast_8h.html  strategy__fast_8h_source.html  (+11 more)
doc/html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  classes_5f.html  classes_67.html  classes_73.html  defines_63.html  defines_64.html  defines_65.html  defines_67.html  defines_6d.html  defines_6e.html  defines_72.html  defines_74.html  enums_64.html  files_32.html  files_61.html  files_67.html  files_73.html  files_75.html  functions_61.html  functions_63.html  functions_64.html  functions_65.html  functions_66.html  functions_67.html  functions_6e.html  (+13 more)
doc/latex/: 2048__fast___i_a_8c.tex  2048__ncurses_8c.tex  2048__sdl_8c.tex  affichage_8c.tex  affichage_8h.tex  annotated.tex  doxygen.sty  files.tex  grid_8c.tex  grid_8h.tex  refman.tex  sdl_8h.tex  strategy_8h.tex  strategy__efficient_8c.tex  strategy__efficient_8h.tex  strategy__fast_8c.tex  strategy__fast_8h.tex  struct___b_o_x__struct.tex  struct__box__border__struct.tex  struct__memory.tex  structgrid__s.tex  structs__result.tex  structstrategy__s.tex  utilities_8c.tex  utilities_8h.tex
documents_latex/: biblio.bbl  biblio.bib  document.tex  rapport_final.tex  rendu.aux  rendu.dvi  rendu.tex  rendu.toc
include/: grid.h
src/: CMakeLists.txt  Makefile
src/2048/: 2048.c  2048_IA.c  2048_efficient_IA.c  2048_fast_IA.c  2048_ncurses.c  2048_ncurses_IA.c  2048_sdl.c  2048_sdl_IA.c  CMakeLists.txt  Makefile  sdl.h
src/grid/: CMakeLists.txt  Makefile  TO DO.txt  affichage.c  affichage.h  grid.c  sdl.h  test_grid  test_grid.c  utilities.c  utilities.h
src/grid/tests/: CMakeLists.txt  test-grid-1.c  test-grid-2.c  test-grid-3.c  test-grid-4.c  test-grid-5.c  test-grid-6.c  test-play.c  test_grid.c
src/stategy/: strategy.c  strategy.h
src/strategy/: CMakeLists.txt  strategy.c  strategy.h  strategy_efficient.c  strategy_efficient.h  strategy_fast.c  strategy_fast.h
